# iztris

./: CMakeLists.txt  README.md
src/: main.cpp
src/board/: Board.cpp  Board.hpp
src/game/: Game.cpp  Game.hpp
src/input/: InputHandler.cpp  InputHandler.hpp
src/izmino/: Izmino.cpp  Izmino.hpp
src/renderer/: ConsoleRenderer.cpp  ConsoleRenderer.hpp
src/utils/: Random.cpp  Random.hpp
tests/utils/: test_random.cpp
